--- a/distributed-transactions-travel/src/test/resources/application.properties
+++ b/distributed-transactions-travel/src/test/resources/application.properties
@@ -47,7 +47,18 @@ camunda.bpm.client.disable-auto-fetching=true
 
 camunda.bpm.client.subscriptions.TravelBookingProcessInit.variable-names=travelBookingId
 camunda.bpm.client.subscriptions.TravelBookingProcessInit.process-definition-key=Process_TravelBooking
-# TODO: Topics für die ExternalTests konfigurieren. Analog zu TravelBookingProcessInit
+camunda.bpm.client.subscriptions.TravelBookingProcessBookHotel.variable-names=travelBookingId
+camunda.bpm.client.subscriptions.TravelBookingProcessBookHotel.process-definition-key=Process_TravelBooking
+camunda.bpm.client.subscriptions.TravelBookingProcessBookCar.variable-names=travelBookingId
+camunda.bpm.client.subscriptions.TravelBookingProcessBookCar.process-definition-key=Process_TravelBooking
+camunda.bpm.client.subscriptions.TravelBookingProcessBookFlight.variable-names=travelBookingId
+camunda.bpm.client.subscriptions.TravelBookingProcessBookFlight.process-definition-key=Process_TravelBooking
+camunda.bpm.client.subscriptions.TravelBookingProcessCancelHotel.variable-names=travelBookingId
+camunda.bpm.client.subscriptions.TravelBookingProcessCancelHotel.process-definition-key=Process_TravelBooking
+camunda.bpm.client.subscriptions.TravelBookingProcessCancelCar.variable-names=travelBookingId
+camunda.bpm.client.subscriptions.TravelBookingProcessCancelCar.process-definition-key=Process_TravelBooking
+camunda.bpm.client.subscriptions.TravelBookingProcessCancelFlight.variable-names=travelBookingId
+camunda.bpm.client.subscriptions.TravelBookingProcessCancelFlight.process-definition-key=Process_TravelBooking
 
 spring.datasource.url=jdbc:h2:mem:travelservice;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.hikari.auto-commit=false
